# testpyproj

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  test_script.py
.nvim/: dap.lua
src/testpyproj/: __about__.py  __main__.py
src/testpyproj/cli/: __init__.py
tests/: __init__.py
