[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testpyproj"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "jcanton", email = "jacopo.canton@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
]

[project.urls]
Documentation = "https://github.com/jcanton/testpyproj#readme"
Issues = "https://github.com/jcanton/testpyproj/issues"
Source = "https://github.com/jcanton/testpyproj"

[project.scripts]
testpyproj = "testpyproj.cli:testpyproj"

[tool.hatch.version]
path = "src/testpyproj/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/testpyproj tests}"

[tool.coverage.run]
source_pkgs = ["testpyproj", "tests"]
branch = true
parallel = true
omit = [
  "src/testpyproj/__about__.py",
]

[tool.coverage.paths]
testpyproj = ["src/testpyproj", "*/testpyproj/src/testpyproj"]
tests = ["tests", "*/testpyproj/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
